force-app/main/default/objects/Estimated_Animals_Reported__c/Estimated_Animals_Reported__c.object-meta.xml
<CustomObject>
    <label>Animals Reported</label>
    <nameField>
        <displayFormat>AA-{0}</displayFormat>
        <label>Animals Reported ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animals Reported</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>