force-app/main/default/objects/Estimated_Animals_Reported__c/fields/Animal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Animal_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Animals Reported</relationshipLabel>
    <relationshipName>Animals_Reported</relationshipName>
    <type>Lookup</type>
</CustomField>