force-app/main/default/objects/Estimated_Animals_Reported__c/fields/Breed_Type__c.field-meta.xml
<CustomField>
    <fullName>Breed_Type__c</fullName>
    <label>Breed/Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>