force-app/main/default/objects/Estimated_Animals_Reported__c/fields/Reported_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Reported_Quantity__c</fullName>
    <label>Reported Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>