force-app/main/default/objects/Estimated_Animals_Reported__c/fields/Scene_Location__c.field-meta.xml
<CustomField>
    <fullName>Scene_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scene Location</label>
    <referenceTo>Scene_Locations__c</referenceTo>
    <relationshipLabel>Animals Reported</relationshipLabel>
    <relationshipName>Animals_Reported</relationshipName>
    <type>Lookup</type>
</CustomField>