force-app/main/default/objects/Estimated_Animals_Reported__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <label>Species</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Avian</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
                <color>#78C953</color>
                <label>Cat</label>
            </value>
            <value>
                <fullName>Cows</fullName>
                <color>#E27001</color>
                <label>Cows</label>
            </value>
            <value>
                <fullName>Dog</fullName>
                <color>#A845DC</color>
                <label>Dog</label>
            </value>
            <value>
                <fullName>Equine</fullName>
                <color>#F3D904</color>
                <label>Equine</label>
            </value>
            <value>
                <fullName>Exotics</fullName>
                <color>#A53711</color>
                <label>Exotics</label>
            </value>
            <value>
                <fullName>Fowl</fullName>
                <color>#66E9BD</color>
                <label>Fowl</label>
            </value>
            <value>
                <fullName>Goat</fullName>
            </value>
            <value>
                <fullName>Pig</fullName>
            </value>
            <value>
                <fullName>Rabbit</fullName>
            </value>
            <value>
                <fullName>Reptile</fullName>
            </value>
            <value>
                <fullName>Sheep</fullName>
            </value>
            <value>
                <fullName>Wildlife</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#0B24BE</color>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>