force-app/main/default/objects/Estimated_Animals_Reported__c/validationRules/Enter_more_details_for_specified_Animal.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_more_details_for_specified_Animal</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Species__c, &quot;Other&quot;),  
ISPICKVAL(Species__c, &quot;Other Livestock&quot;),  
ISPICKVAL(Species__c, &quot;Exotics&quot;),  
ISPICKVAL(Species__c, &quot;Fowl&quot;),  
ISPICKVAL(Species__c, &quot;Birds&quot;)), Breed_Type__c =&quot;&quot;, Case__r.RecordType.Id = &quot;0125A000001YZdo&quot;)</errorConditionFormula>
    <errorDisplayField>Breed_Type__c</errorDisplayField>
    <errorMessage>Additional detail is required for Species/Breed for the Animal Type selected.</errorMessage>
</ValidationRule>