force-app/main/default/objects/Estimated_Animals_Reported__c/validationRules/Reported_Quantity_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Reported_Quantity_cannot_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Reported_Quantity__c = null, Case__r.RecordType.Id = &quot;0125A000001YZdo&quot;)</errorConditionFormula>
    <errorDisplayField>Reported_Quantity__c</errorDisplayField>
    <errorMessage>Reported Quantity cannot be left blank</errorMessage>
</ValidationRule>